- Refine mosanry layout on tablets. - Fix an issue with Amaranth color scheme.

--- a/assets/css/src/af-masonry.scss
+++ b/assets/css/src/af-masonry.scss
@@ -1,32 +1,60 @@
 @if ($use_masonry==1 and $separate_containers ==1) {
+  // Fallback until masonry is triggred
+  body:not(#articles.masonry) .entry {
+    margin: 0 5px 20px
+  }
+
+  .entry-title {
+    font-size: 1.3em
+  }
+  .post-thumbnail {
+    margin: 0 -20px 10px
+  }
+
+  .post-thumbnail img {
+    width: 100%;
+    margin-bottom: 10px
+  }
+  .more-link {
+    display: none
+  }
+
+  #articles article {
+    float: left;
+    box-sizing: border-box;
+  }
+
   @media only screen and (min-width: $mobile_width) {
 
-    $gutter: ($padding*.5)/(($site_width - $padding)*($main_width/100))*100;
+    //$gutter: ($padding*.5)/($site_width - $padding)*$main_width;
+
+    $site_width_inner: $site_width - $padding;
+    $gutter: (($padding/2) / ($site_width_inner*$main_width/100))*100;
+
     $article_width: (100 - ($masonry_column_count - 1)*$gutter)/$masonry_column_count;
-
-    .entry-title {
-      font-size: 1.3em
-    }
-    .post-thumbnail {
-      margin: 0 -20px 10px
-    }
-
-    .post-thumbnail img {
-      width: 100%;
-      margin-bottom: 10px
-    }
-    .more-link {
-      display: none
-    }
 
     #articles article {
       width: $article_width*1%;
-      float: left;
-      box-sizing: border-box;
       margin: 0 0 $padding/2;
     }
     .gutter-sizer {
       width: $gutter*1%
     }
+  }
+
+  @media only screen and (min-width: $mobile_portrait_width) and (max-width: $mobile_width) {
+
+    $gutter: ($padding/2px)/(768-40)*100;
+    $masonry_column_count: 2;
+    $article_width: (100 - ($masonry_column_count - 1)*$gutter)/$masonry_column_count;
+
+    #articles article {
+      width: $article_width * 1%;
+      margin: 0 0 $padding/2;
+    }
+    .gutter-sizer {
+      width: $gutter*1%
+    }
+
   }
 }
